# loxmocha

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
.gemini/: config.yaml
.github/workflows/: ci.yml
cmake/: loxmocha-clang-tidy.cmake  loxmocha-cppcheck.cmake  loxmocha-targets.cmake  loxmocha-warnings.cmake
scripts/: run_coverage.bash
spec/: 1-declarations.md  2-expressions.md  3-types.md  4-patterns.md  declarations.md  introduction.md  lexical-grammar.md  make-spec.bash  patterns.md
src/: CMakeLists.txt
src/ast/: CMakeLists.txt  decl.cpp  expr.cpp  module.cpp  pattern.cpp  pretty_printer.cpp  stmt.cpp  type.cpp
src/ast/include/loxmocha/ast/: ast.hpp  base.hpp  d2-export.hpp  d2_export.hpp  decl.hpp  diagram_export.hpp  dot-export.hpp  dot_export.hpp  expr.hpp  module.hpp  pattern.hpp  pretty_printer.hpp  stmt.hpp  type.hpp
src/lexer/: CMakeLists.txt  lexer.cpp
src/lexer/include/lexer/: lexer.hpp
src/lexer/include/loxmocha/ast/: ident_map.hpp  lexer.hpp  token.def  token.hpp
src/loxmc/: CMakeLists.txt  main.cpp
src/memory/: CMakeLists.txt
src/memory/include/loxmocha/memory/: safe_pointer.hpp
src/node/: CMakeLists.txt
src/node/include/loxmocha/: node.hpp
src/parser/: CMakeLists.txt  parser-decl.cpp  parser-expr.cpp  parser-internal.hpp  parser-module.cpp  parser-pattern.cpp  parser-stmt.cpp  parser-type.cpp  parser.cpp
src/parser/include/loxmocha/ast/: parser.hpp
src/source/: CMakeLists.txt  source.cpp
src/source/include/loxmocha/source/: source.hpp
test/: CMakeLists.txt
(+14 files in other folders)
